[package]
name = "executioner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
hex = "0.4"
sha3 = "0.10"
secp256k1 = { version = "0.28", features = ["recovery", "global-context"] }
rlp = "0.6"
memmap2 = "0.9"
core_affinity = "0.8"
